Fix association table spacing
Ref. #63.
Fixes #33.

--- a/app/assets/stylesheets/layout/_question-association.css.scss
+++ b/app/assets/stylesheets/layout/_question-association.css.scss
@@ -21,6 +21,10 @@
   }
 
   &.l-play {
+    .table-condensed td {
+      padding: $hsu/2;
+    }
+
     .association-pair-dynamic {
       span {
         display: inline-block;
@@ -45,10 +49,8 @@
   }
 
   &.l-feedback {
-    .l-played & {
-      ul {
-        margin-bottom: 0;
-      }
+    .table-condensed td {
+      padding: $hsu/2;
     }
   }
 }
